# VirtualFermLab

./: .gitignore  CLAUDE.md  README.md  crawl_results.json  pyproject.toml
0.TomsCode/: MPR18112025CSV - Sheet1.csv  MPRpHExp18112025Analysis.ipynb  README.md
0.TomsCode/1.Code/: ESCAPE25PEwRandomSampling.ipynb
notebooks/: hplc_prediction.ipynb
scripts/: crawl_strains.py  crawl_strains_ssh.py  generate_synthetic_data.py  start_extraction_api.sh  start_ui.sh  start_vllm.sh  switch_ui.sh  test_ecoli_pipeline.py  test_evidence_check.py  test_fulltext_pipeline.py  train_with_synthetic.py  verify_prediction.py
src/virtualfermlab/data/: loaders.py  resampling.py  transforms.py
src/virtualfermlab/discovery/: db.py  llm_extraction.py  name_resolver.py  paper_search.py  pipeline.py  prompts.py  strains.db  taxonomy.py
src/virtualfermlab/experiments/: analysis.py  doe.py  monte_carlo.py
synthetic_data/: augmented_metrics.csv  baseline_metrics.csv  parameter_sets.csv  synthetic_1-to-1_GlucoseXylose.csv  synthetic_2-to-1_GlucoseXylose.csv
tests/: conftest.py
tests/test_discovery/: test_db.py  test_llm_extraction.py  test_name_resolver.py  test_paper_search.py  test_pipeline.py  test_taxonomy.py
tests/test_experiments/: test_doe.py  test_monte_carlo.py
tests/test_extraction_api/: test_app.py
tests/test_fitting/: test_metrics.py  test_objectives.py
tests/test_models/: test_enzyme_regulation.py  test_kinetics.py  test_ode_systems.py  test_ph_model.py
tests/test_parameters/: test_distributions.py  test_schema.py
tests/test_simulator/: test_integrator.py
(+37 files in other folders)
