[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "virtualfermlab"
version = "0.1.0"
description = "Modular fermentation process simulator for waste-to-protein research"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "requests>=2.28",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
discovery = ["requests>=2.28"]
extraction_api = ["flask>=1.0", "requests>=2.28"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
prediction = ["xgboost>=1.7", "scikit-learn>=1.2"]
web = ["flask>=1.0", "plotly>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
